--- a/BotTransfer.csproj
+++ b/BotTransfer.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="NLog" Version="5.0.1" />
     <PackageReference Include="NLog.Config" Version="4.7.15" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
+    <PackageReference Include="Sentry" Version="3.19.0" />
+    <PackageReference Include="SharpRaven" Version="2.4.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Net.Requests" Version="4.3.0" />
